--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Home</title>
 </head>
 <body>
     <header>
-        
+        <div class="navbar">
+            <a href="">Home</a>
+            <a href=""></a>
+            <a href=""></a>
+        </div>
     </header>
+
+    <main>
+        <section class="section1">
+            <div>
+                <p>fffff</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
