--- a/index.html
+++ b/index.html
@@ -9,16 +9,52 @@
 <body>
     <header>
         <div class="navbar">
-            <a href="">Home</a>
-            <a href=""></a>
-            <a href=""></a>
+            <div>
+                <h3>Mary Harolhette O. Rom</h3>
+            </div>
+            <div>
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#skills">Skills</a>
+                <a href="">My Work</a>
+                <a href="">Hire Me</a>
+            </div>
         </div>
     </header>
 
     <main>
-        <section class="section1">
-            <div>
-                <p>fffff</p>
+        <section id="home" class="home">
+            <div class="home-container">
+                <img class="pic" src="pic.jpg" alt="">
+                <h1>Mary Harolhette O. Rom</h1>
+                <h3>UI and UX Designer / Web Developer</h3>
+            </div>
+        </section>
+
+        <section id="about" class="about">
+            <div class="about-container">
+                <h1>Who Am I?</h1>
+                <p>
+                    "I am a passionate and skilled UI/UX designer and web developer focused on creating engaging and user-friendly digital experiences. 
+                    I specialize in designing intuitive interfaces and building responsive websites that prioritize user satisfaction. 
+                    With experience in a variety of design tools and web development technologies, I approach each project with a commitment to excellence and a keen eye for detail. 
+                    My goal is to craft digital solutions that are not only aesthetically pleasing but also highly functional. 
+                    I thrive in collaborative environments and am always eager to learn and adapt to new challenges in the ever-evolving field of digital design."
+                </p>
+            </div>
+        </section>
+
+        <section id="skills" class="skills">
+            <div class="skills-container">
+                <h1>Skills</h1>
+                <div class="pic-container">
+                    <img src="php.png" alt="" style="width: 8%; height: 5%;">
+                    <img src="html.png" alt="" style="width: 6.5%; height: 5%;">
+                    <img src="css-logo.png" alt="" style="width: 10%; height: 10%;">
+                    <img src="bootstrap.png" alt="" style="width: 7%; height: 10%;">
+                    <img src="figma.png" alt="" style="width: 6%; height: 10%;">
+                    <img src="canva.png" alt="" style="width: 6.5%; height: 10%;">
+                </div>
             </div>
         </section>
     </main>
