--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#skills">Skills</a>
-                <a href="">My Work</a>
+                <a href="#my-work">My Work</a>
                 <a href="">Hire Me</a>
             </div>
         </div>
@@ -48,14 +48,18 @@
             <div class="skills-container">
                 <h1>Skills</h1>
                 <div class="pic-container">
-                    <img src="php.png" alt="" style="width: 8%; height: 5%;">
-                    <img src="html.png" alt="" style="width: 6.5%; height: 5%;">
-                    <img src="css-logo.png" alt="" style="width: 10%; height: 10%;">
-                    <img src="bootstrap.png" alt="" style="width: 7%; height: 10%;">
-                    <img src="figma.png" alt="" style="width: 6%; height: 10%;">
-                    <img src="canva.png" alt="" style="width: 6.5%; height: 10%;">
+                    <img class="pic2" src="php.png" alt="" style="width: 8%; height: 5%;">
+                    <img class="pic2" src="html.png" alt="" style="width: 6.5%; height: 5%;">
+                    <img class="pic2" src="css-logo.png" alt="" style="width: 10%; height: 10%;">
+                    <img class="pic2" src="bootstrap.png" alt="" style="width: 7%; height: 10%;">
+                    <img class="pic2" src="figma.png" alt="" style="width: 6%; height: 10%;">
+                    <img class="pic2" src="canva.png" alt="" style="width: 6.5%; height: 10%;">
                 </div>
             </div>
+        </section>
+
+        <section id="my-work" class="my-work">
+
         </section>
     </main>
 </body>
