--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </section>
 
-        <section id="my-work" class="my-work">
+        <section id="my-work" class="my-work">loio
 
         </section>
     </main>
