--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header>
         <div class="navbar">
             <div>
-                <h3>Mary Harolhette O. Rom</h3>
+                <h3>Harolhette</h3>
             </div>
             <div>
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#skills">Skills</a>
-                <a href="#my-work">My Work</a>
-                <a href="">Hire Me</a>
+                <a href="#my-work">Works</a>
+                <a href="">Contact</a>
             </div>
         </div>
     </header>
@@ -26,14 +26,14 @@
         <section id="home" class="home">
             <div class="home-container">
                 <img class="pic" src="pic.jpg" alt="">
-                <h1>Mary Harolhette O. Rom</h1>
-                <h3>UI and UX Designer / Web Developer</h3>
+                <h1><span><h1>Hello!</h1></span> I'm Mary Harolhette O. Rom</h1>
+                <h3>A UI/UX Designer and Web Developer </h3>
             </div>
         </section>
 
         <section id="about" class="about">
             <div class="about-container">
-                <h1>Who Am I?</h1>
+                <h1>About Me</h1>
                 <p>
                     "I am a passionate and skilled UI/UX designer and web developer focused on creating engaging and user-friendly digital experiences. 
                     I specialize in designing intuitive interfaces and building responsive websites that prioritize user satisfaction. 
