--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <a href="#home">Home</a>
                 <a href="#about">About</a>
                 <a href="#skills">Skills</a>
-                <a href="#my-work">Works</a>
-                <a href="">Contact</a>
+                <a href="#works">Works</a>
+                <a href="#contact">Contact</a>
             </div>
         </div>
     </header>
@@ -58,8 +58,50 @@
             </div>
         </section>
 
-        <section id="my-work" class="my-work">
+        <section id="works" class="works">
+            <div class="works-container">
+                <h1>My Works</h1>
+                <div class="works-pics">
+                    <img src="work2.png" alt="" style="width: 30%;">
+                    <img src="work1.png" alt="" style="width: 45%;">
+                </div>
+            </div>
+        </section>
 
+        <section id="contact" class="contact">
+            <div class="hireme">
+                <h1>I'm available for Job Opportunities</h1>
+                <button>Hire Me</button>
+            </div>
+
+            <div class="contact-section">
+                <div class="contacts1">
+                    <h3 style="font-size: 40px; margin-bottom: 20px;">Let's get in touch</h3>
+                    <p style="font-size: x-large; font-weight: 500;">Address:</p>
+                    <p style="font-size: large; margin-bottom: 10px;">Villa, Sta. Maria, Zamboanga City, Philippines</p>
+                    <p style="font-size: x-large; font-weight: 500;">Email:</p>
+                    <p style="font-size: large; margin-bottom: 10px;">haroletrom@gmail.com</p>
+                    <p style="font-size: x-large; font-weight: 500;">Contact Number:</p>
+                    <p style="font-size: large; margin-bottom: 10px;">09261012840</p>
+                </div>
+
+                <div class="form1">
+                    <form action="">
+                        <div style="margin-bottom: 20px; ">
+                            <input type="text" placeholder="Name" style="width: 100%; height: 40px; font-size: 20px;">
+                        </div>
+                        <div style="margin-bottom: 20px;">
+                            <input type="text" placeholder="Email" style="width: 100%; height: 40px; font-size: 20px;">
+                        </div>
+                        <div style="margin-bottom: 20px;">
+                            <textarea placeholder="Message" style="width: 100%; height: 100px; font-size: 20px;"></textarea>
+                        </div>
+                        <div style="margin-bottom: 15px;">
+                            <button>Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </section>
     </main>
 </body>
